# Paper-GaussFSBP

./: .gitignore  Manifest.toml  Project.toml  README.md  pyproject.toml
driver/: Exponential_Problem.py  Mixed_Endpoint_Singularity.py  Mixed_Exponential_Problem.py  build_exponential_operator_example.py  operator_cache.json  smooth_sanity_check.py
examples/: Manifest.toml  Paper-GaussFSBP.code-workspace  Project.toml  check_ops.py  compute_equi_FSBP.py  dyn_mixed.py  dyn_mixed_BL.py  dyn_mixed_sqrt.py  exp_scale_test.py  exponential.py  exponential_squared.py  julia_exponential_operator.py  lampert_ops.jl  loc_dyn_mixed.py  mixed.py  mixed_right_test.py  operator_cache.json  operator_cache_lampert.json  operator_cache_sqrt.json  operator_cache_sqrt_v10.json  operator_cache_sqrt_v11.json  operator_cache_sqrt_v13.json  operator_cache_sqrt_v8.json  operator_cache_sqrt_v9.json  operator_cache_v2.json  operator_cache_v3.json  operator_cache_v4.json  operator_cache_v5.json  operator_cache_v6.json  scalesep_operator_cache_v2.json  sep_scale.py  sep_scale_old.py  shuex.py  smooth_sanity_check.py  sqrt2.py  square_root_conservative.py  square_root_nonconservative.py
lib/: __init__.py  julia_operators.py
src/: __init__.py  assembly.py  elements.py  norms.py  operator_library.py  operators.py  plotting.py  problems.py  sats.py  solve.py
tests/: test_assembly_invariants.py  test_conservation_constant_coefficient.py  test_constant_state.py  test_energy_stability_weighted_norm.py  test_julia_operators.py  test_lhs_rhs_consistency.py  test_mixed_operator_interfaces.py  (+5 more)
(+18 files in other folders)
