[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gaussfsbp"
version = "0.1.0"
description = "1D generalized SBP-SAT steady solver for variable-coefficient advection"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "scipy>=1.11",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "matplotlib>=3.8",
]
julia = [
  "juliacall==0.9.35",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src", "src.*", "lib"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
